crates/es-fluent-derive/tests/ui/enum_only_keys_on_struct.stderr
error: Attribute error in message struct container: `#[fluent(domain = ...)]` cannot be used in message struct container `DomainOnStruct`
       help: accepted key here is namespace
 --> tests/ui/enum_only_keys_on_struct.rs:4:10
  |
4 | #[fluent(domain = "auth")]
  |          ^^^^^^

error: Attribute error in message struct container: `#[fluent(resource = ...)]` cannot be used in message struct container `ResourceOnStruct`
       help: accepted key here is namespace
  --> tests/ui/enum_only_keys_on_struct.rs:10:10
   |
10 | #[fluent(resource = "auth_error")]
   |          ^^^^^^^^

error: Attribute error in message struct container: `#[fluent(skip_inventory)]` cannot be used in message struct container `SkipInventoryOnStruct`
       help: accepted key here is namespace
  --> tests/ui/enum_only_keys_on_struct.rs:16:10
   |
16 | #[fluent(skip_inventory)]
   |          ^^^^^^^^^^^^^^
